--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
 <!--  -->
 			<a href="//xz.eqxiu.com/phone/index.html" class="tex-con">
 				<i></i>
-				<label>做网站找秀站<br>零编程&nbsp;&nbsp;上手快</label>
-				<span>我要建站</span>
+				<label> <br> &nbsp;&nbsp; </label>
+				
 			</a>
 			<div class="copyrightClose" onclick="$(this).parents('.footerFixed').remove()"></div>
 		 </div>
