--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <meta content="true" name="x5-fullscreen" >
 <meta name="App-Config" content="fullscreen=yes,useHistoryState=yes,transition=yes">
 
-<link rel="apple-touch-icon-precomposed" href="//resxz.eqh5.com/"/>
-<link rel="apple-touch-icon" href="//resxz.eqh5.com/"/>
-<link rel="Shortcut Icon" href="//resxz.eqh5.com/"/>
+<link rel="apple-touch-icon-precomposed" href="//resxz.eqh5.com/qngroup001%2Fu4562928%2F3%2F0%2F3f0f4204de684034959062540f9f1ee9.ico"/>
+<link rel="apple-touch-icon" href="//resxz.eqh5.com/qngroup001%2Fu4562928%2F3%2F0%2F3f0f4204de684034959062540f9f1ee9.ico"/>
+<link rel="Shortcut Icon" href="//resxz.eqh5.com/qngroup001%2Fu4562928%2F3%2F0%2F3f0f4204de684034959062540f9f1ee9.ico"/>
 <link rel="stylesheet" type="text/css" href="//libs-xz.eqxiu.com/icon/css/font-awesome.min.css">
 
 <script type="text/javascript" src="//libs-xz.eqxiu.com/jquery/jquery-1.11.2.min.js"></script>
@@ -80,7 +80,7 @@
 </script>
 
 <title>
-				美容美发类设计</title>
+				木纹</title>
 		<script type="text/javascript" src="//libs-xz.eqxiu.com/jquery/jquery-1.11.2.min.js"></script>
 <script type="text/javascript" src="/js/phone/plugin/wqdformDate.js"></script>
 
@@ -135,7 +135,6 @@
 <!--  -->
 <!--  -->
 
-			
 			</a>
 			<div class="copyrightClose" onclick="$(this).parents('.footerFixed').remove()"></div>
 		 </div>
