--- a/索引.html
+++ b/索引.html
@@ -252,7 +252,16 @@ window.FAI_HAWK_EYE && (window.FAI_HAWK_EYE.js_err_filter = function() {
 		<div id="J_newGuestGiftPage"></div>
 		
 
-			
+			<div class="fk_mobiCornerAd_wrap">
+				<div id="mobiCornerAd" class="fk_mobiCornerAd">
+					<a href="https://jzm.fkw.com/pro8.html?_ta=2508" class="fk_mobiCornerAd_link J_link">
+					    <img class="fk_mobiCornerAd_img" src="//mo.faisys.com/image/mobiAdvert/mfjz.png" alt="">
+					</a>
+					<div class="fk_mobiCornerAd_close J_close">
+						<img class="fk_mobiCornerAd_close_img" src="//mo.faisys.com/image/mobiAdvert/mfkz-close.png" alt="">
+					</div>
+				</div>
+			</div>
 	
 		</div>
 	<div id="J_paymentGiftPage"></div>
